--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,23 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+# Python
+__pycache__/
+*.py[cod]
+*.pyo
+*.pyd
+.pytest_cache/
+.pytest_tmp/
+pytest-cache-files-*
+.mypy_cache/
+.ruff_cache/
+.coverage
+.venv/
+venv/
+*.egg-info/
+
+# ClawSpa local state
+.agentwellness/
+.agentwellness_test/
+scorecard.json
